gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail9572.d
version https://git-lfs.github.com/spec/v1
oid sha256:ed2f864aa16eb388afa3327cf0e0c02accf5a8a9c0d54935ac60f636ec657b22
size 188
